added dockerfile and makefile, added some error logging

--- a/ui/vue.html
+++ b/ui/vue.html
@@ -47,7 +47,7 @@
                             Cluster is ${ info.cluster_health ? '' : 'not ' }healthy.
                         </h1>
                         <div class="subheading white--text">
-                            Cluster Status: <strong>${ info.cluster_status }</strong>, Served by: <strong>{{ .ServedBy }}</strong>
+                            Cluster Status: <strong>${ info.cluster_status }</strong>
                         </div>
                     </v-layout>
                 </v-container>
